CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT("EASTL" CXX)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)

SET(EASTL_PATH ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/EASTL.cmake)

ADD_DEFINITIONS(${EASTL_DEFINITIONS})
INCLUDE_DIRECTORIES(${EASTL_INCLUDE_DIR})
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRCS)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRCS})

enable_testing()
add_executable(example ${CMAKE_CURRENT_SOURCE_DIR}/contrib/example/example.cpp)
link_directories(${EASTL_LIBRARY_DIR})
target_link_libraries(example ${EASTL_LIBRARY})
add_test(example ${EXECUTABLE_OUTPUT_PATH}/example)
add_dependencies(example EASTL)
